Fix JsonPartyConfig build errors.